# ScreenCloak

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GEMINI_review.md  LICENSE  PRD.md  Project_Building_Plan.md  README.md  implementation_plan.md  implementation_plan_v2.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  false_positive.yml  feature_request.yml
docs/: OBS_SETUP.md  OBS_STREAM_DELAY_SETUP.md
docs/plans/: 2026-02-14-m3-packaging-design.md  2026-02-14-m3-packaging.md  2026-02-14-m4-design.md  2026-02-14-m4-implementation.md
safestream/: .coverage  README.md  SafeStream-Windows.spec  SafeStream.spec  ScreenCloak-Windows.spec  ScreenCloak.spec  benchmark_ocr.py  config.yaml  main.py  pyproject.toml  requirements.txt
safestream/core/: bundle_paths.py  capture.py  config_manager.py  detector.py  frame_diff.py  logger.py  obs_client.py  ocr_engine.py
safestream/data/: api_patterns.json
safestream/detectors/: api_keys.py  base.py  credit_card.py  crypto_address.py  seed_phrase.py
safestream/scripts/: build_mac.sh  build_windows.bat  safestream.iss  screencloak.iss
safestream/tests/: benchmark.py  generate_test_images.py  test_bundle_paths.py  test_detector.py  test_integration.py  (+1 more)
screencloak/: README.md  main.py  pyproject.toml  requirements.txt
screencloak/core/: bundle_paths.py  obs_client.py
screencloak/detectors/: credit_card.py  personal_strings.py
screencloak/scripts/: build_mac.sh
screencloak/tests/: benchmark.py  generate_test_images.py  test_integration.py  test_obs_client.py  test_tray.py
screencloak/ui/: tray.py
(+1 files in other folders)
