[project]
name = "screencloak"
version = "0.1.0"
description = "Real-time sensitive data detection for OBS streams"
requires-python = ">=3.11"
authors = [
    {name = "ScreenCloak Team"}
]
readme = "README.md"
license = {text = "MIT"}

[tool.black]
line-length = 100
target-version = ['py311']
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "--cov=screencloak --cov-report=term-missing"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_backend"
